# Quirk-Old

./: .gitignore  CMakeLists.txt  Notes.txt  README.md  install.sh  lexer.cpp  lexer.l  main.c  parser.cpp  plan.txt  test.qk  test.vg  token_types_list.txt
include/quirk_compiler/: astnode.h  codegen.h  condition.h  lexer.h  parser.h
src/: astnode.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
